# altitutor-monorepo

./: .env.local  .eslintrc.js  .gitignore  .npmrc  .windsurfrules  BILLING_E2E_TESTING.md  CLAUDE.md  CONTEXT.md  PNPM_MIGRATION.md  QUICK_TEST_GUIDE.md  README.md  SUPABASE_MIGRATION.md  VERCEL_SETUP.md  data-table-implementation-guide.md  lint-output.txt  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  tailwind.config.js  test_final_comprehensive.sql  test_search_comprehensive.sql  test_search_functions.sql  test_search_simple.sql  test_search_with_auth.sql  test_topic_edge_cases.sql  test_topic_parent_update.sql  test_topic_simple.sql  tsconfig.json  tsconfig.tsbuildinfo  turbo.json  vercel.json
.cursor/: mcp.json
docs/: REFACTORING_IMPROVEMENTS.md  agent-option-a-migration.md  auth-setup.md  billing-system-flow.md  billing-testing-guide.md  booking-system-e2e-testing.md  communications-implementation-status.md  dashboard-guidelines.md  invite-flow-e2e-testing.md  marketing-web-migration.md  monorepo.md  search-pagination-plan.md  security-advisor-findings.md  stripe-db-sync-plan.md  student-portal-implementation-summary.md  student-portal-testing.md  supabase-types.md  trial-booking-public-plan.md  tutor-web-implementation-summary.md  twilio-voice-setup-instructions.md  twilio-voice-setup.md  ucat-paste-images-plan.md  working-note.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  tasks.md  techContext.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+3714 files in other folders)
