[package]
name = "altitutor-admin"
version = "0.1.0"
description = "Altitutor Admin Desktop Application"
authors = ["Altitutor"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "1.5.4", features = [
    "system-tray",
    "shell-open",
    "notification",
    "window-maximize",
    "window-minimize",
    "window-unmaximize",
    "window-unminimize",
    "window-close",
    "window-hide",
    "window-show",
    "window-start-dragging",
    "global-shortcut-all",
    "fs-all"
] }
tauri-plugin-log = "2.0.0-rc"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
